--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.15",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
     },
