--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "admin-lte": "3.0"
+        "@fullcalendar/luxon": "^4.4.0",
+        "admin-lte": "3.0",
+        "luxon": "^1.23.0"
     }
 }
