--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@fullcalendar/luxon": "^4.4.0",
+        "@fullcalendar/timegrid": "^4.4.0",
         "admin-lte": "3.0",
         "luxon": "^1.23.0"
     }
