Ajout des DataTransformers sur PersonalCalendar et User

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app.user.roles:
+        'Utilisateur': ROLE_USER
+        'Administrateur': ROLE_ADMIN
 
 services:
     # default configuration for services in *this* file
