--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/src/.preload.php
 /var/
 /vendor/
+/.idea
+composer.lock
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
