--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,10 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
+    encoders:
+        App\Entity\User:
+            algorithm: auto
+            cost: 12
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
