--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /public/bundles/
 /var/
 /vendor/
+/src/.preload.php
+/.idea
+composer.lock
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
